@@ -46,12 +46,97 @@ my_data =
     {type = "item", name = "pm-indium-plate", ib_data = {ib_let_badge ="In"} },
     {type = "item", name = "pm-thallium-plate", ib_data = {ib_let_badge ="Tl"} },
     {type = "item", name = "pm-thallium-plate", ib_data = {ib_let_badge ="Te"} },
+    {type = "item", name = "steel-plate", ib_data = {ib_let_badge ="ST"} },
+    {type = "item", name = "pm-stainless-steel-alloy", ib_data = {ib_let_badge ="SST"} },
+    {type = "item", name = "pm-brass-plate", ib_data = {ib_let_badge ="BS"} },
+    {type = "item", name = "pm-solder-plate", ib_data = {ib_let_badge ="SR"} },
+    {type = "item", name = "pm-kasethal-plate", ib_data = {ib_let_badge ="KS"} },
+    {type = "item", name = "iron-ore", ib_data = {ib_let_badge ="Fe", ib_let_invert = true} },
+    {type = "item", name = "copper-ore", ib_data = {ib_let_badge ="Cu", ib_let_invert = true} },
+    {type = "item", name = "pm-nickel-ore", ib_data = {ib_let_badge ="Ni", ib_let_invert = true} },
+    {type = "item", name = "pm-zinc-ore", ib_data = {ib_let_badge ="Zn", ib_let_invert = true} },
+    {type = "item", name = "pm-manganese-ore", ib_data = {ib_let_badge ="Mn", ib_let_invert = true} },
+    {type = "item", name = "pm-gold-ore", ib_data = {ib_let_badge ="Au", ib_let_invert = true} },
+    {type = "item", name = "pm-silver-ore", ib_data = {ib_let_badge ="Ag", ib_let_invert = true} },
+    {type = "item", name = "pm-titanium-ore", ib_data = {ib_let_badge ="Ti", ib_let_invert = true} },
+    {type = "item", name = "pm-tungsten-ore", ib_data = {ib_let_badge ="W", ib_let_invert = true} },
+    {type = "item", name = "pm-palladium-ore", ib_data = {ib_let_badge ="Pd", ib_let_invert = true} },
+    {type = "item", name = "pm-platinum-ore", ib_data = {ib_let_badge ="Pt", ib_let_invert = true} },
+    {type = "item", name = "pm-cobalt-ore", ib_data = {ib_let_badge ="Co", ib_let_invert = true} },
+    {type = "item", name = "pm-cadnium-ore", ib_data = {ib_let_badge ="Cd", ib_let_invert = true} },
+    {type = "item", name = "pm-aluminium-ore", ib_data = {ib_let_badge ="Al", ib_let_invert = true} },
+    {type = "item", name = "pm-tin-ore", ib_data = {ib_let_badge ="Sn", ib_let_invert = true} },
+    {type = "item", name = "pm-lead-ore", ib_data = {ib_let_badge ="Pb", ib_let_invert = true} },
+    {type = "item", name = "pm-indium-ore", ib_data = {ib_let_badge ="In", ib_let_invert = true} },
+    {type = "item", name = "pm-thallium-ore", ib_data = {ib_let_badge ="Tl", ib_let_invert = true} },
+    {type = "item", name = "pm-thallium-ore", ib_data = {ib_let_badge ="Te", ib_let_invert = true} },
     {type = "item", name = "pm-bismuth-ore", ib_data = {ib_let_badge ="Bi"} },
     {type = "item", name = "pm-vanadium-ore", ib_data = {ib_let_badge ="V"} },
     {type = "item", name = "pm-chrominum-ore", ib_data = {ib_let_badge ="Cr"} },
     {type = "item", name = "pm-lithium-ore", ib_data = {ib_let_badge ="Li"} },
     {type = "item", name = "pm-lithium-chloride", ib_data = {ib_let_badge ="LiC"} },
     {type = "item", name = "pm-lithium-bromide", ib_data = {ib_let_badge ="LiB"} },
+    {type = "item", name = "pm-francium-209", ib_data = {ib_let_badge ="209"} },
+    {type = "item", name = "pm-francium-210", ib_data = {ib_let_badge ="210"} },
+    {type = "item", name = "pm-francium-211", ib_data = {ib_let_badge ="211"} },
+
+
+    {type = "fluid", name = "pm-francium", ib_data = {ib_let_badge ="Fr"} },
+    {type = "fluid", name = "pm-liquid-mercury", ib_data = {ib_let_badge ="Hg"} },
+    {type = "fluid", name = "pm-mercury-vapour", ib_data = {ib_let_badge ="VHg"} },
+    {type = "fluid", name = "pm-oxygen-gas", ib_data = {ib_let_badge ="O"} },
+    {type = "fluid", name = "pm-nitrogen-gas", ib_data = {ib_let_badge ="N"} },
+    {type = "fluid", name = "pm-chlorine", ib_data = {ib_let_badge ="Cl"} },
+    {type = "fluid", name = "pm-hydrochloric-acid", ib_data = {ib_let_badge ="HCl"} },
+    {type = "fluid", name = "pm-trace-gas", ib_data = {ib_let_badge ="TG"} },
+    {type = "fluid", name = "pm-refinery-gases", ib_data = {ib_let_badge ="RG"} },
+    {type = "fluid", name = "pm-hydrogen-flouride", ib_data = {ib_let_badge ="HF"} },
+    {type = "fluid", name = "pm-hydroflouric-acid", ib_data = {ib_let_badge ="HF", ib_let_invert = true} },
+    {type = "fluid", name = "pm-bromine", ib_data = {ib_let_badge ="Br"} },
+    {type = "fluid", name = "pm-boron", ib_data = {ib_let_badge ="B"} },
+    {type = "fluid", name = "pm-hydrogen-bromide", ib_data = {ib_let_badge ="HBr"} },
+    {type = "fluid", name = "pm-hydrogen-gas", ib_data = {ib_let_badge ="H"} },
+    {type = "fluid", name = "pm-helium-gas", ib_data = {ib_let_badge ="He"} },
+    {type = "fluid", name = "pm-argon-gas", ib_data = {ib_let_badge ="Ar"} },
+    {type = "fluid", name = "pm-butane-gas", ib_data = {ib_let_badge ="Ba"} },
+    {type = "fluid", name = "pm-butene-gas", ib_data = {ib_let_badge ="Be"} },
+    {type = "fluid", name = "pm-molten-iron", ib_data = {ib_let_badge ="MFe"} },
+    {type = "fluid", name = "pm-molten-copper", ib_data = {ib_let_badge ="MCu"} },
+    {type = "fluid", name = "pm-molten-nickel", ib_data = {ib_let_badge ="MNi"} },
+    {type = "fluid", name = "pm-molten-manganese", ib_data = {ib_let_badge ="MMn"} },
+    {type = "fluid", name = "pm-molten-zinc", ib_data = {ib_let_badge ="MZn"} },
+    {type = "fluid", name = "pm-molten-gold", ib_data = {ib_let_badge ="MAu"} },
+    {type = "fluid", name = "pm-molten-silver", ib_data = {ib_let_badge ="MAg"} },
+    {type = "fluid", name = "pm-molten-titanium", ib_data = {ib_let_badge ="MTi"} },
+    {type = "fluid", name = "pm-molten-tungsten", ib_data = {ib_let_badge ="MW"} },
+    {type = "fluid", name = "pm-molten-cobalt", ib_data = {ib_let_badge ="MCo"} },
+    {type = "fluid", name = "pm-molten-cadnium", ib_data = {ib_let_badge ="MCd"} },
+    {type = "fluid", name = "pm-molten-palladium", ib_data = {ib_let_badge ="MPd"} },
+    {type = "fluid", name = "pm-molten-platinum", ib_data = {ib_let_badge ="MPt"} },
+    {type = "fluid", name = "pm-molten-aluminium", ib_data = {ib_let_badge ="MAl"} },
+    {type = "fluid", name = "pm-molten-tin", ib_data = {ib_let_badge ="MSn"} },
+    {type = "fluid", name = "pm-molten-lead", ib_data = {ib_let_badge ="MPb"} },
+    {type = "fluid", name = "pm-molten-indium", ib_data = {ib_let_badge ="MIn"} },
+    {type = "fluid", name = "pm-molten-thallium", ib_data = {ib_let_badge ="MTl"} },
+    {type = "fluid", name = "pm-oil-residuals", ib_data = {ib_let_badge ="RO"} },
+    {type = "fluid", name = "pm-fuel-oils", ib_data = {ib_let_badge ="FO"} },
+    {type = "fluid", name = "pm-lubricating-oils", ib_data = {ib_let_badge ="LO"} },
+    {type = "fluid", name = "pm-diesel", ib_data = {ib_let_badge ="DI"} },
+    {type = "fluid", name = "pm-petrol", ib_data = {ib_let_badge ="PT"} },
+    {type = "fluid", name = "pm-kerosene", ib_data = {ib_let_badge ="KE"} },
+    {type = "fluid", name = "pm-naptha", ib_data = {ib_let_badge ="NP"} },
+    {type = "fluid", name = "pm-caesium", ib_data = {ib_let_badge ="Ce"} },
+    {type = "fluid", name = "pm-liquid-gallium", ib_data = {ib_let_badge ="Ga"} },
+    {type = "fluid", name = "pm-molten-nickel", ib_data = {ib_let_badge ="MNi"} },
+
+
+    {type = "tool", name = "automation-science-pack", ib_data = {ib_let_badge ="TM"} },
+    {type = "tool", name = "logistic-science-pack", ib_data = {ib_let_badge ="ATM"} },
+    {type = "tool", name = "pm-advanced-advanced-transition-metal-science-pack", ib_data = {ib_let_badge ="AAT"} },
+    {type = "tool", name = "pm-post-transition-metal-science-pack", ib_data = {ib_let_badge ="PTM"} },
+    {type = "tool", name = "chemical-science-pack", ib_data = {ib_let_badge ="RNM"} },
+    {type = "tool", name = "pm-metalloid-science-pack", ib_data = {ib_let_badge ="MT"} },
+    {type = "tool", name = "pm-alkali-metal-science-pack", ib_data = {ib_let_badge ="AM"} },
 }
 
 for _,i in ipairs(my_data) do
