@@ -26,6 +26,7 @@ Date: 2024-08-09
     - Added lithium-sulfur modular batteries, which are smaller then vanadium-oxide modular batteries but hold less charge.
     - Gave a bunch more recipes producitvity.
     - Finalised LDS's recipe (for now..)
+    - Added Icon Badge functionality! still in early stages, so feel free to contact me if anything is off.
 
   Changes:
     - Gave glass its own row of recipes, and moved science bottles there.
